--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <source>src/main/java</source>
                                 <source>src/main/generated</source>
                                 <source>source/overlap2d/src</source>
                                 <source>source/modular/src/main/java</source>
